front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-11-28T20:48:30Z"
  generation: 1
  labels:
    app: front
  name: front
  namespace: default
  resourceVersion: "420"
  uid: 5f25062f-a2bb-459f-92c5-7130a20270f2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: front
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: mohamedjarboua/frontend:2.0
        imagePullPolicy: IfNotPresent
        name: frontend
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-11-28T20:48:30Z"
    lastUpdateTime: "2025-11-28T20:48:30Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2025-11-28T20:48:30Z"
    lastUpdateTime: "2025-11-28T20:48:30Z"
    message: ReplicaSet "front-577568d484" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
