front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2025-12-01T21:23:47Z"
  generation: 1
  name: front-ingress
  namespace: default
  resourceVersion: "42944"
  uid: c17d64e8-8904-4649-ab27-38f01f8cdbb4
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: front-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
